--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://database-2.cc8jbwx3agun.us-east-2.rds.amazonaws.com:3306/sys
-spring.datasource.username=admin
-spring.datasource.password=adminadmin
+spring.datasource.url=jdbc:mysql://localhost:3306/dbp
+spring.datasource.username=root
+spring.datasource.password=gera1127
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
