--- a/pom.xml
+++ b/pom.xml
@@ -59,7 +59,12 @@
 			<version>1.18.24</version>
 			<scope>provided</scope>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>6.2.3.Final</version>
+        </dependency>
+    </dependencies>
 
 
 
