--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/Test2
+spring.datasource.url=jdbc:mysql://localhost:3306/dbp
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=Likoloko12345
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
